# -*- Autoconf -*-

AC_PREREQ(2.53)
AC_INIT([src/knife_definitions.h])
AM_INIT_AUTOMAKE([knife],[1.0.1_rc1])

AC_PROG_RANLIB

AC_PROG_CC
AM_PROG_CC_C_O
AC_HEADER_STDC

AC_OUTPUT( \
	   Makefile \
	   src/Makefile \
	   util/Makefile \
	   example/Makefile \
	   example/diamond-airfoil/Makefile \
	   example/diamond-airfoil/surface/Makefile \
	   example/diamond-airfoil/cutcell/Makefile \
	   )
